--- a/Project3Hangman/Resources/layout/Game.axml
+++ b/Project3Hangman/Resources/layout/Game.axml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/notepad.png" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/notepad"
+    android:padding="5dip"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="312.5dp"
+        android:layout_height="232.0dp"
+        android:id="@+id/imgHangman" />
+</RelativeLayout>
