--- a/Project3Hangman/Resources/layout/Game.axml
+++ b/Project3Hangman/Resources/layout/Game.axml
@@ -7,7 +7,7 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
+        android:src="@drawable/hangman"
         android:layout_width="312.5dp"
         android:layout_height="232.0dp"
         android:id="@+id/imgHangman"
