--- a/Project3Hangman/Resources/layout/Game.axml
+++ b/Project3Hangman/Resources/layout/Game.axml
@@ -16,7 +16,7 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@id/imgHangman"
         android:id="@+id/listView1" />
     <TextView
