--- a/Project3Hangman/Resources/layout/CustomRowScore.axml
+++ b/Project3Hangman/Resources/layout/CustomRowScore.axml
@@ -15,6 +15,6 @@
         android:paddingLeft="8dip"
         android:paddingBottom="2dip"
         android:textSize="18dip"
-        android:text="Your Name will appear here"
+        android:text="Data should will appear here"
         android:textColor="@android:color/black" />
 </RelativeLayout>
