--- a/Project3Hangman/Resources/layout/RoundEnd.axml
+++ b/Project3Hangman/Resources/layout/RoundEnd.axml
@@ -7,7 +7,7 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <ImageView
-        android:src="@drawable/hangman1"
+        android:src="@winner"
         android:layout_width="312.5dp"
         android:layout_height="160.0dp"
         android:id="@+id/imgResult"
@@ -19,7 +19,7 @@
         android:layout_below="@id/imgResult"
         android:layout_marginTop="20px"
         android:textColor="@color/abc_input_method_navigation_guard"
-        android:textSize="50px"
+        android:textSize="20px"
         android:id="@+id/txtResult"
         android:layout_centerHorizontal="true" />
     <Button
