--- a/Project3Hangman/Resources/layout/RoundEnd.axml
+++ b/Project3Hangman/Resources/layout/RoundEnd.axml
@@ -7,34 +7,44 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <ImageView
-        android:src="@winner"
+        android:src="@drawable/hangman1"
         android:layout_width="312.5dp"
         android:layout_height="160.0dp"
         android:id="@+id/imgResult"
         android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/imgResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout1">
+        <Button
+            android:text="Next Word"
+            android:id="@+id/btnNextWord"
+            android:layout_weight="1"
+            android:padding="35px"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="End Game"
+            android:id="@+id/btnEndGame"
+            android:layout_weight="1"
+            android:padding="35px"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </LinearLayout>
     <TextView
         android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imgResult"
+        android:layout_below="@id/linearLayout1"
         android:layout_marginTop="20px"
+        android:paddingLeft="25px"
+        android:paddingRight="25"
         android:textColor="@color/abc_input_method_navigation_guard"
-        android:textSize="20px"
+        android:textSize="25px"
         android:id="@+id/txtResult"
-        android:layout_centerHorizontal="true" />
-    <Button
-        android:text="Next Word"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnNextWord"
-        android:layout_below="@id/txtResult"
-        android:layout_centerHorizontal="true" />
-    <Button
-        android:text="End Game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnEndGame"
-        android:layout_marginTop="20px"
-        android:layout_below="@id/btnNextWord"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
