--- a/Project3Hangman/Resources/layout/CustomRowScore.axml
+++ b/Project3Hangman/Resources/layout/CustomRowScore.axml
@@ -3,18 +3,29 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/sqlite_id"
+        android:id="@+id/score_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
     <TextView
-        android:id="@+id/lblName"
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="2dip"
+        android:paddingTop="5dip"
         android:paddingLeft="8dip"
         android:paddingBottom="2dip"
         android:textSize="18dip"
-        android:text="Data should will appear here"
+        android:text="Name will appear here"
         android:textColor="@android:color/black" />
+    <TextView
+        android:text="35"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtScore"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="40dip"
+        android:gravity="right"
+        android:paddingLeft="14dip"
+        android:paddingBottom="3dip"
+        android:textSize="25dip" />
 </RelativeLayout>
