--- a/Project3Hangman/Resources/layout/Game.axml
+++ b/Project3Hangman/Resources/layout/Game.axml
@@ -6,14 +6,57 @@
     android:padding="5dip"
     android:minWidth="25px"
     android:minHeight="25px">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linDetails">
+        <TextView
+            android:text="Number of Letters: "
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/abc_input_method_navigation_guard"
+            android:id="@+id/txtLetterCount" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/linPlayerScore">
+            <TextView
+                android:text="Player: "
+                android:id="@+id/txtnPName"
+                android:gravity="right"
+                android:textAlignment="gravity"
+                android:textColor="@color/abc_input_method_navigation_guard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="Score: "
+                android:id="@+id/txtPScore"
+                android:gravity="right"
+                android:textAlignment="gravity"
+                android:textColor="@color/abc_input_method_navigation_guard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
     <ImageView
         android:src="@drawable/hangman1"
         android:layout_width="312.5dp"
         android:layout_height="160.0dp"
         android:id="@+id/imgHangman"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/linDetails"
         android:layout_centerHorizontal="true" />
     <TextView
-        android:text="_  _  _  _  _  _  _  _"
+        android:text="________"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgHangman"
@@ -21,7 +64,8 @@
         android:textColor="@color/abc_input_method_navigation_guard"
         android:textSize="50px"
         android:id="@+id/textView1"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:letterSpacing="@android:dimen/app_icon_size" />
     <LinearLayout
         android:orientation="horizontal"
         android:minWidth="25px"
