--- a/Project3Hangman/Resources/layout/CustomRowScore.axml
+++ b/Project3Hangman/Resources/layout/CustomRowScore.axml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_selector"
+    android:padding="5dip">
     <TextView
         android:id="@+id/score_id"
         android:layout_width="wrap_content"
