--- a/Project3Hangman/Resources/layout/ScoreBoard.axml
+++ b/Project3Hangman/Resources/layout/ScoreBoard.axml
@@ -3,32 +3,19 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/notepad"
-    android:padding="5dip"
+    android:padding="1dp"
     android:minWidth="25px"
     android:minHeight="25px">
-    <include
-        android:id="@+id/toolbar"
-        android:layout="@layout/toolbar" />
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="right"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <Button
-            android:id="@+id/btnpopupmenu"
-            android:layout_width="50dp"
-            android:padding="10dp"
-            android:layout_height="wrap_content"
-            android:text="..." />
-    </LinearLayout>
     <TextView
         android:text="High Scores"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="10px"
+        android:textAllCaps="true"
+        android:textSize="30dp"
+        android:fontFamily="@string/abc_font_family_title_material"
         android:textColor="@color/abc_input_method_navigation_guard"
         android:layout_width="fill_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btnpopupmenu"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:id="@+id/txtHighScores" />
@@ -37,8 +24,8 @@
         android:minHeight="25px"
         android:layout_marginTop="20px"
         android:layout_below="@id/txtHighScores"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_width="fill_parent"
+        android:layout_height="370dp"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:id="@+id/lvScores" />
     <LinearLayout
@@ -53,15 +40,8 @@
         <Button
             android:text="Play Game"
             android:id="@+id/btnPlayGame"
+            android:background="@color/button_material_dark"
             android:layout_width="fill_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
-    <Button
-        android:text="Reset Scores"
-        android:textSize="14dp"
-        android:backgroundTint="@color/abc_hint_foreground_material_light"
-        android:id="@+id/btnResetScores"
-        android:layout_below="@id/linRestart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </RelativeLayout>
