--- a/Project3Hangman/Resources/layout/CustomRowScore.axml
+++ b/Project3Hangman/Resources/layout/CustomRowScore.axml
@@ -9,16 +9,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-    <TextView
-        android:id="@+id/txtName"
+    <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dip"
-        android:paddingLeft="25dip"
-        android:paddingBottom="2dip"
-        android:textSize="18dip"
-        android:text="Name will appear here"
-        android:textColor="@android:color/black" />
+        android:id="@+id/linearLayout1">
+        <TextView
+            android:id="@+id/txtName"
+            android:paddingTop="5dip"
+            android:paddingLeft="25dip"
+            android:paddingBottom="2dip"
+            android:textSize="18dip"
+            android:text="Name will appear here"
+            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="Category Name"
+            android:id="@+id/txtCategory"
+            android:layout_below="@id/txtName"
+            android:paddingLeft="25dip"
+            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <TextView
         android:text="35"
         android:layout_width="wrap_content"
@@ -27,6 +43,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="40dip"
         android:gravity="right"
+        android:layout_centerInParent="true"
         android:paddingLeft="14dip"
         android:paddingBottom="3dip"
         android:textSize="25dip" />
