--- a/Project3Hangman/Resources/layout/ScoreBoard.axml
+++ b/Project3Hangman/Resources/layout/ScoreBoard.axml
@@ -19,13 +19,41 @@
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:id="@+id/txtHighScores" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_below="@id/txtHighScores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:id="@+id/linearLayout1">
+        <Button
+            android:text="All Scores"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/btnAll" />
+        <Button
+            android:text="Animals"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/btnAnimals" />
+        <Button
+            android:text="Countries"
+            android:id="@+id/btnCountries"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="match_parent" />
+    </LinearLayout>
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_marginTop="20px"
-        android:layout_below="@id/txtHighScores"
+        android:layout_below="@id/linearLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="370dp"
+        android:layout_height="300dp"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:id="@+id/lvScores" />
     <LinearLayout
